hphp/hack/test/typecheck/fc_enum_4.php.rust_elab.exp
File "fc_enum_4.php", line 4, characters 6-8:
`HH\BuiltinEnum` is an implementation internal class that cannot be used directly (Naming[2053])
File "fc_enum_4.php", line 4, characters 6-8:
Enums must be `int` or `string` or `arraykey`, not `bool` (Typing[4024])
